--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="utf-8">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script language="javascript" type="text/javascript" src="bower_components/p5js/lib/p5.js"></script>
     <!-- uncomment lines below to include extra p5 libraries -->
     <!--<script language="javascript" src="bower_components/p5js/lib/addons/p5.dom.js"></script>-->
     <!--<script language="javascript" src="bower_components/p5js/lib/addons/p5.sound.js"></script>-->
     <script language="javascript" type="text/javascript" src="src/Bomb.js"></script>
+    <script language="javascript" type="text/javascript" src="src/Enemy.js"></script>
     <script language="javascript" type="text/javascript" src="src/Game.js"></script>
     <script language="javascript" type="text/javascript" src="src/Bomberman.js"></script>
     <script language="javascript" type="text/javascript" src="src/sketch.js"></script>
