--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 
 <body>
     <h1>Bomberman em p5.js</h1>
+    <div id="credits">
+        <p>By <a href="https://hugoazevedosoares.github.io/" target="_blank">Hugo Azevedo</a></p>
+    </div>
 </body>
 
 </html>
