--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <meta charset="utf-8">
+    <title>Bomberman-JS</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
