--- a/index.html
+++ b/index.html
@@ -19,6 +19,19 @@
 
 <body>
     <h1>Bomberman em p5.js</h1>
+    <div id="controls">
+        <div class="uper-row">
+            <button class="command" id="up" onclick="commands('up')">U</button>
+        </div>
+        <div class="main-row">
+            <button class="command" id="left" onclick="commands('left')">L</button>
+            <button class="command" id="right" onclick="commands('right')">R</button>
+            <button class="command" id="bomb" onclick="commands('bomb')">B</button>
+        </div>
+        <div class="lower-row">
+            <button class="command" id="down" onclick="commands('down')">D</button>
+        </div>
+    </div>
     <div id="credits">
         <p>By <a href="https://hugoazevedosoares.github.io/" target="_blank">Hugo Azevedo</a></p>
     </div>
