--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Bomberman JS" />
     <meta property="og:description" content="Bomberman Clássico Online" />
-    <meta property="og:image" content="https://hugoazevedosoares.github.io/bombermanJS/assets/classic.png" />
+    <meta property="og:image" content="/assets/classic.png" />
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script language="javascript" type="text/javascript" src="bower_components/p5js/lib/p5.js"></script>
@@ -27,13 +27,6 @@
     <!-- Load Facebook SDK for JavaScript -->
     <div id="fb-root"></div>
     <script>
-        window.fbAsyncInit = function() {
-            FB.init({
-                appId: 'your-app-id',
-                xfbml: true,
-                version: 'v2.5'
-            });
-        };
         (function(d, s, id) {
             var js, fjs = d.getElementsByTagName(s)[0];
             if (d.getElementById(id)) return;
