--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Bomberman JS" />
     <meta property="og:description" content="Bomberman Clássico Online" />
-    <meta property="og:image" content="/assets/classic.png" />
+    <meta property="og:image" content="https://hugoazevedosoares.github.io/bombermanJS/assets/classic.png" />
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script language="javascript" type="text/javascript" src="bower_components/p5js/lib/p5.js"></script>
@@ -86,7 +86,7 @@
     <div id="credits">
         <p>By
             <a href="https://hugoazevedosoares.github.io/" target="_blank">Hugo Azevedo</a> -
-            <a href="//www.iubenda.com/privacy-policy/43044193" title="Privacy Policy">Política de Privacidade</a>
+            <a href="//www.iubenda.com/privacy-policy/43044193" target="_blank" title="Privacy Policy">Política de Privacidade</a>
         </p>
     </div>
 </body>
