--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <script language="javascript" src="bower_components/p5js/lib/addons/p5.dom.js"></script>
     <!--<script language="javascript" src="bower_components/p5js/lib/addons/p5.sound.js"></script>-->
     <script language="javascript" type="text/javascript" src="src/Bomb.js"></script>
+    <script language="javascript" type="text/javascript" src="src/strategys/Strategy.js"></script>
+    <script language="javascript" type="text/javascript" src="src/strategys/AleatoryStrategy.js"></script>
     <script language="javascript" type="text/javascript" src="src/Enemy.js"></script>
     <script language="javascript" type="text/javascript" src="src/Game.js"></script>
     <script language="javascript" type="text/javascript" src="src/Bomberman.js"></script>
@@ -66,7 +68,7 @@
                 <a onclick="location.reload()">Reload</a>
             </li>
             <li>
-                <a onclick="facebookShare()">Compartilhar</a>
+                <a onclick="facebookShare()" href="https://hugoazevedosoares.github.io/bombermanJS/">Compartilhar</a>
             </li>
         </ul>
     </div>
