--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <!-- uncomment lines below to include extra p5 libraries -->
     <script language="javascript" src="bower_components/p5js/lib/addons/p5.dom.js"></script>
     <!--<script language="javascript" src="bower_components/p5js/lib/addons/p5.sound.js"></script>-->
-    <script language="javascript" type="text/javascript" src="src/strategys/Strategy.js"></script>
-    <script language="javascript" type="text/javascript" src="src/strategys/AleatoryStrategy.js"></script>
+    <script language="javascript" type="text/javascript" src="src/Strategy.js"></script>
+    <script language="javascript" type="text/javascript" src="src/AleatoryStrategy.js"></script>
     <script language="javascript" type="text/javascript" src="src/Bomb.js"></script>
     <script language="javascript" type="text/javascript" src="src/Enemy.js"></script>
     <script language="javascript" type="text/javascript" src="src/Game.js"></script>
