tradução de textos

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         })(window, document);
     </script>
 
-    <h1>Bomberman em p5.js</h1>
+    <h1>Bomberman - p5.js</h1>
     <div class="sidebar left">
         <h3>Options</h3>
         <ul>
@@ -100,9 +100,9 @@
         </div>
     </div>
     <div id="credits">
-        <p>By
+        <p>Made by 
             <a href="https://hugoazevedosoares.github.io/" target="_blank">Hugo Azevedo</a> -
-            <a href="//www.iubenda.com/privacy-policy/43044193" target="_blank" title="Privacy Policy">Política de Privacidade</a>
+            <a href="https://www.iubenda.com/privacy-policy/43044193" target="_blank" title="Privacy Policy">Privacy Policy</a>
         </p>
     </div>
 </body>
